--- a/docs/docs/api/client/typescript/classes/by.mdx
+++ b/docs/docs/api/client/typescript/classes/by.mdx
@@ -8,13 +8,13 @@ toc_max_heading_level: 4
 
 Class used by [Identifying GamiumObject](gamium/client/object-path).
 
-<hr class="solid" /> <s generated />
+<hr class="solid" />  <s generated />
 
 ## Methods <s generated />
 
 ### path <s generated />
 
-<s childtag /> <code  style={{ position: 'relative', top:'-20px', fontSize: '70%' }}  children="public"/> <code  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}  children="static"/> <s generated />
+<s childtag /> <code style={{ position:'relative', top:'-20px', fontSize:'70%'}} children='public'/> <code style={{ position:'relative', top:'-20px', fontSize:'70%'}} children='static'/> <s generated />
 
 Use the Object Path to locate the object.
 
@@ -24,10 +24,6 @@ Use the Object Path to locate the object.
 const cameraObj = await gamium.findObject(By.path('/Main Camera[1]'));
 ```
 
-<s childtag /> <code  style={{ position: 'relative', top:'-20px', fontSize: '70%' }}  children="public"/> <code  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}  children="static"/> <s generated />
-
-<s childtag /> <code  style={{ position: 'relative', top:'-20px', fontSize: '70%' }}  children="public"/> <code  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}  children="static"/> <s generated />
-
 ##### Arguments <s generated />
 
 - str [`string`]( https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String) <s generated />
@@ -36,13 +32,13 @@ const cameraObj = await gamium.findObject(By.path('/Main Camera[1]'));
 
 ##### Returns <s generated />
 
-- [`By`](by) <s generated />
+- [`By`]( by) <s generated />
 
-<hr class="solid" /> <s generated />
+<hr class="solid" />  <s generated />
 
 ### tag <s generated />
 
-<s childtag /> <code  style={{ position: 'relative', top:'-20px', fontSize: '70%' }}  children="public"/> <code  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}  children="static"/> <s generated />
+<s childtag /> <code style={{ position:'relative', top:'-20px', fontSize:'70%'}} children='public'/> <code style={{ position:'relative', top:'-20px', fontSize:'70%'}} children='static'/> <s generated />
 
 Use the Object Tag to locate the object.
 
@@ -52,10 +48,6 @@ Use the Object Tag to locate the object.
 const cameraObj = await gamium.findObject(By.tag('MainCamera'));
 ```
 
-<s childtag /> <code  style={{ position: 'relative', top:'-20px', fontSize: '70%' }}  children="public"/> <code  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}  children="static"/> <s generated />
-
-<s childtag /> <code  style={{ position: 'relative', top:'-20px', fontSize: '70%' }}  children="public"/> <code  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}  children="static"/> <s generated />
-
 ##### Arguments <s generated />
 
 - str [`string`]( https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String) <s generated />
@@ -64,16 +56,17 @@ const cameraObj = await gamium.findObject(By.tag('MainCamera'));
 
 ##### Returns <s generated />
 
-- [`By`](by) <s generated />
+- [`By`]( by) <s generated />
 
-<hr class="solid" /> <s generated />
+<hr class="solid" />  <s generated />
 
 ## Properties <s generated />
 
-#### by [`ObjectLocatorBy`](../enums/object-locator-by) <s generated />
+#### by [`ObjectLocatorBy`]( ../enums/object-locator-by) <s generated />
 
-<hr class="solid" /> <s generated />
+<hr class="solid" />  <s generated />
 
 #### str [`string`]( https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String) <s generated />
 
-<hr class="solid" /> <s generated />
+<hr class="solid" />  <s generated />
+
