--- a/docs/docs/api/client/typescript/classes/key-by.mdx
+++ b/docs/docs/api/client/typescript/classes/key-by.mdx
@@ -8,13 +8,13 @@ toc_max_heading_level: 4
 
 The class used to request keystrokes in [Game Controling](gamium/client/game-control)
 
-<hr class="solid" /> <s generated />
+<hr class="solid" />  <s generated />
 
 ## Methods <s generated />
 
 ### unityKeyboard <s generated />
 
-<s childtag /> <code  style={{ position: 'relative', top:'-20px', fontSize: '70%' }}  children="public"/> <code  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}  children="static"/> <s generated />
+<s childtag /> <code style={{ position:'relative', top:'-20px', fontSize:'70%'}} children='public'/> <code style={{ position:'relative', top:'-20px', fontSize:'70%'}} children='static'/> <s generated />
 
 The type used by projects with [Unity Input System]( https://docs.unity3d.com/Packages/com.unity.inputsystem@latest) to enter the keyboard.
 
@@ -24,23 +24,19 @@ The type used by projects with [Unity Input System]( https://docs.unity3d.com/Pa
 await gamium.sendKey(KeyBy.unityKeyboard('Space'));
 ```
 
-<s childtag /> <code  style={{ position: 'relative', top:'-20px', fontSize: '70%' }}  children="public"/> <code  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}  children="static"/> <s generated />
-
-<s childtag /> <code  style={{ position: 'relative', top:'-20px', fontSize: '70%' }}  children="public"/> <code  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}  children="static"/> <s generated />
-
 ##### Arguments <s generated />
 
-- key `keyof` `typeof` [`UnityKeyboard`](../enums/unity-keyboard) <s generated />
+- key `keyof` `typeof` [`UnityKeyboard`]( ../enums/unity-keyboard) <s generated />
 
 ##### Returns <s generated />
 
-- [`KeyBy`](key-by) <s generated />
+- [`KeyBy`]( key-by) <s generated />
 
-<hr class="solid" /> <s generated />
+<hr class="solid" />  <s generated />
 
 ### unityKeycode <s generated />
 
-<s childtag /> <code  style={{ position: 'relative', top:'-20px', fontSize: '70%' }}  children="public"/> <code  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}  children="static"/> <s generated />
+<s childtag /> <code style={{ position:'relative', top:'-20px', fontSize:'70%'}} children='public'/> <code style={{ position:'relative', top:'-20px', fontSize:'70%'}} children='static'/> <s generated />
 
 The type that is used for keyboard input in projects with [Unity Input Manager]( https://docs.unity3d.com/Manual/class-InputManager.html) .
 
@@ -50,26 +46,23 @@ The type that is used for keyboard input in projects with [Unity Input Manager](
 await gamium.sendKey(KeyBy.unityKeycode('Space'));
 ```
 
-<s childtag /> <code  style={{ position: 'relative', top:'-20px', fontSize: '70%' }}  children="public"/> <code  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}  children="static"/> <s generated />
-
-<s childtag /> <code  style={{ position: 'relative', top:'-20px', fontSize: '70%' }}  children="public"/> <code  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}  children="static"/> <s generated />
-
 ##### Arguments <s generated />
 
-- code `keyof` `typeof` [`UnityKeyCode`](../enums/unity-key-code) <s generated />
+- code `keyof` `typeof` [`UnityKeyCode`]( ../enums/unity-key-code) <s generated />
 
 ##### Returns <s generated />
 
-- [`KeyBy`](key-by) <s generated />
+- [`KeyBy`]( key-by) <s generated />
 
-<hr class="solid" /> <s generated />
+<hr class="solid" />  <s generated />
 
 ## Properties <s generated />
 
-#### by [`InputKeyBy`](../enums/input-key-by) <s generated />
+#### by [`InputKeyBy`]( ../enums/input-key-by) <s generated />
 
-<hr class="solid" /> <s generated />
+<hr class="solid" />  <s generated />
 
 #### str [`string`]( https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String) <s generated />
 
-<hr class="solid" /> <s generated />
+<hr class="solid" />  <s generated />
+
