--- a/docs/docs/api/client/typescript/classes/rpc-by.mdx
+++ b/docs/docs/api/client/typescript/classes/rpc-by.mdx
@@ -8,13 +8,13 @@ toc_max_heading_level: 4
 
 Class used by [Remote Procedure Call](gamium/client/rpc) when calling remote functions.
 
-<hr class="solid" /> <s generated />
+<hr class="solid" />  <s generated />
 
 ## Methods <s generated />
 
 ### field <s generated />
 
-<s childtag /> <code  style={{ position: 'relative', top:'-20px', fontSize: '70%' }}  children="public"/> <code  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}  children="static"/> <s generated />
+<s childtag /> <code style={{ position:'relative', top:'-20px', fontSize:'70%'}} children='public'/> <code style={{ position:'relative', top:'-20px', fontSize:'70%'}} children='static'/> <s generated />
 
 Gets the value of a specific field
 
@@ -26,10 +26,6 @@ const field = await gamium.executeRpc(
 );
 ```
 
-<s childtag /> <code  style={{ position: 'relative', top:'-20px', fontSize: '70%' }}  children="public"/> <code  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}  children="static"/> <s generated />
-
-<s childtag /> <code  style={{ position: 'relative', top:'-20px', fontSize: '70%' }}  children="public"/> <code  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}  children="static"/> <s generated />
-
 ##### Arguments <s generated />
 
 - classPath [`string`]( https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String) <s generated />
@@ -38,13 +34,13 @@ const field = await gamium.executeRpc(
 
 ##### Returns <s generated />
 
-- [`RpcBy`](rpc-by) <s generated />
+- [`RpcBy`]( rpc-by) <s generated />
 
-<hr class="solid" /> <s generated />
+<hr class="solid" />  <s generated />
 
 ### method <s generated />
 
-<s childtag /> <code  style={{ position: 'relative', top:'-20px', fontSize: '70%' }}  children="public"/> <code  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}  children="static"/> <s generated />
+<s childtag /> <code style={{ position:'relative', top:'-20px', fontSize:'70%'}} children='public'/> <code style={{ position:'relative', top:'-20px', fontSize:'70%'}} children='static'/> <s generated />
 
 Invokes a specific function.
 
@@ -56,10 +52,6 @@ await gamium.executeRpc(
 );
 ```
 
-<s childtag /> <code  style={{ position: 'relative', top:'-20px', fontSize: '70%' }}  children="public"/> <code  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}  children="static"/> <s generated />
-
-<s childtag /> <code  style={{ position: 'relative', top:'-20px', fontSize: '70%' }}  children="public"/> <code  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}  children="static"/> <s generated />
-
 ##### Arguments <s generated />
 
 - classPath [`string`]( https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String) <s generated />
@@ -70,13 +62,13 @@ await gamium.executeRpc(
 
 ##### Returns <s generated />
 
-- [`RpcBy`](rpc-by) <s generated />
+- [`RpcBy`]( rpc-by) <s generated />
 
-<hr class="solid" /> <s generated />
+<hr class="solid" />  <s generated />
 
 ### property <s generated />
 
-<s childtag /> <code  style={{ position: 'relative', top:'-20px', fontSize: '70%' }}  children="public"/> <code  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}  children="static"/> <s generated />
+<s childtag /> <code style={{ position:'relative', top:'-20px', fontSize:'70%'}} children='public'/> <code style={{ position:'relative', top:'-20px', fontSize:'70%'}} children='static'/> <s generated />
 
 Get the value of specific professional profile
 
@@ -88,10 +80,6 @@ const property = await gamium.executeRpc(
 );
 ```
 
-<s childtag /> <code  style={{ position: 'relative', top:'-20px', fontSize: '70%' }}  children="public"/> <code  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}  children="static"/> <s generated />
-
-<s childtag /> <code  style={{ position: 'relative', top:'-20px', fontSize: '70%' }}  children="public"/> <code  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}  children="static"/> <s generated />
-
 ##### Arguments <s generated />
 
 - classPath [`string`]( https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String) <s generated />
@@ -100,24 +88,25 @@ const property = await gamium.executeRpc(
 
 ##### Returns <s generated />
 
-- [`RpcBy`](rpc-by) <s generated />
+- [`RpcBy`]( rpc-by) <s generated />
 
-<hr class="solid" /> <s generated />
+<hr class="solid" />  <s generated />
 
 ## Properties <s generated />
 
-#### by [`ExecuteRpcBy`](../enums/execute-rpc-by) <s generated />
+#### by [`ExecuteRpcBy`]( ../enums/execute-rpc-by) <s generated />
 
-<hr class="solid" /> <s generated />
+<hr class="solid" />  <s generated />
 
 #### className [`string`]( https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String) <s generated />
 
-<hr class="solid" /> <s generated />
+<hr class="solid" />  <s generated />
 
 #### targetName [`string`]( https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String) <s generated />
 
-<hr class="solid" /> <s generated />
+<hr class="solid" />  <s generated />
 
 #### params [`unknown`]( https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Object)[] <s generated />
 
-<hr class="solid" /> <s generated />
+<hr class="solid" />  <s generated />
+
