--- a/docs/docs/api/client/typescript/classes/until.mdx
+++ b/docs/docs/api/client/typescript/classes/until.mdx
@@ -6,13 +6,13 @@ toc_max_heading_level: 4
 
 # Until <s generated />
 
-<hr class="solid" /> <s generated />
+<hr class="solid" />  <s generated />
 
 ## Methods <s generated />
 
 ### elementInteractable <s generated />
 
-<s childtag /> <code  style={{ position: 'relative', top:'-20px', fontSize: '70%' }}  children="public"/> <code  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}  children="static"/> <s generated />
+<s childtag /> <code style={{ position:'relative', top:'-20px', fontSize:'70%'}} children='public'/> <code style={{ position:'relative', top:'-20px', fontSize:'70%'}} children='static'/> <s generated />
 
 - Wait until the UIElement received as a factor is interactive.
 
@@ -24,25 +24,21 @@ await gamium.wait(Until.elementInteractable(okButton));
 await okButton.click();
 ```
 
-<s childtag /> <code  style={{ position: 'relative', top:'-20px', fontSize: '70%' }}  children="public"/> <code  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}  children="static"/> <s generated />
-
-<s childtag /> <code  style={{ position: 'relative', top:'-20px', fontSize: '70%' }}  children="public"/> <code  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}  children="static"/> <s generated />
-
 ##### Arguments <s generated />
 
-- param [`UIElement`](ui-element) <s generated />
+- param [`UIElement`]( ui-element) <s generated />
 
-- options [`Partial`]( https://www.typescriptlang.org/docs/handbook/utility-types.html#partialtype)<[`QueryObjectInteractableOptions`](../types/query-object-interactable-options)> <s generated />
+- options [`Partial`]( https://www.typescriptlang.org/docs/handbook/utility-types.html#partialtype)<[`QueryObjectInteractableOptions`]( ../types/query-object-interactable-options)> <s generated />
 
 ##### Returns <s generated />
 
 - `UIElementCondition` <s generated />
 
-<hr class="solid" /> <s generated />
+<hr class="solid" />  <s generated />
 
 ### objectLocated <s generated />
 
-<s childtag /> <code  style={{ position: 'relative', top:'-20px', fontSize: '70%' }}  children="public"/> <code  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}  children="static"/> <s generated />
+<s childtag /> <code style={{ position:'relative', top:'-20px', fontSize:'70%'}} children='public'/> <code style={{ position:'relative', top:'-20px', fontSize:'70%'}} children='static'/> <s generated />
 
 - Wait until the object is found to the Locator, wait until the object is found.
 
@@ -54,25 +50,21 @@ const okButton = await gamium.wait(
 );
 ```
 
-<s childtag /> <code  style={{ position: 'relative', top:'-20px', fontSize: '70%' }}  children="public"/> <code  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}  children="static"/> <s generated />
-
-<s childtag /> <code  style={{ position: 'relative', top:'-20px', fontSize: '70%' }}  children="public"/> <code  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}  children="static"/> <s generated />
-
 ##### Arguments <s generated />
 
-- locator [`Locator`](../types/locator) <s generated />
+- locator [`Locator`]( ../types/locator) <s generated />
 
-- options [`Partial`]( https://www.typescriptlang.org/docs/handbook/utility-types.html#partialtype)<[`FindObjectOptions`](../types/find-object-options)> <s generated />
+- options [`Partial`]( https://www.typescriptlang.org/docs/handbook/utility-types.html#partialtype)<[`FindObjectOptions`]( ../types/find-object-options)> <s generated />
 
 ##### Returns <s generated />
 
 - `ObjectInfoCondition` <s generated />
 
-<hr class="solid" /> <s generated />
+<hr class="solid" />  <s generated />
 
 ### objectsLocated <s generated />
 
-<s childtag /> <code  style={{ position: 'relative', top:'-20px', fontSize: '70%' }}  children="public"/> <code  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}  children="static"/> <s generated />
+<s childtag /> <code style={{ position:'relative', top:'-20px', fontSize:'70%'}} children='public'/> <code style={{ position:'relative', top:'-20px', fontSize:'70%'}} children='static'/> <s generated />
 
 - Wait until the Objects corresponding to the Locator received as a factor are found.
 
@@ -84,18 +76,15 @@ const products = await gamium.wait(
 );
 ```
 
-<s childtag /> <code  style={{ position: 'relative', top:'-20px', fontSize: '70%' }}  children="public"/> <code  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}  children="static"/> <s generated />
-
-<s childtag /> <code  style={{ position: 'relative', top:'-20px', fontSize: '70%' }}  children="public"/> <code  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}  children="static"/> <s generated />
-
 ##### Arguments <s generated />
 
-- locator [`Locator`](../types/locator) <s generated />
+- locator [`Locator`]( ../types/locator) <s generated />
 
-- options [`Partial`]( https://www.typescriptlang.org/docs/handbook/utility-types.html#partialtype)<[`FindObjectOptions`](../types/find-object-options)> <s generated />
+- options [`Partial`]( https://www.typescriptlang.org/docs/handbook/utility-types.html#partialtype)<[`FindObjectOptions`]( ../types/find-object-options)> <s generated />
 
 ##### Returns <s generated />
 
 - `ObjectInfosCondition` <s generated />
 
-<hr class="solid" /> <s generated />
+<hr class="solid" />  <s generated />
+
