--- a/docs/docs/api/client/typescript/classes/gamium-client.mdx
+++ b/docs/docs/api/client/typescript/classes/gamium-client.mdx
@@ -28,7 +28,7 @@ const gamium = gamiumKit.gamium;
 
 <s childtag /> <code style={{ position:'relative', top:'-20px', fontSize:'70%'}} children='public'/> <s generated />
 
-Create an [`ActionChain`](action-chain). You can check how to use it in ["Control The Game"](gamium/client/game-control).
+Create an [`ActionChain`](action-chain). You can check how to use it in ["Control Game"](gamium/client/game-control).
 
 ##### Usage
 
@@ -178,7 +178,7 @@ const screen = await gamium.screen();
 
 <s childtag /> <code style={{ position:'relative', top:'-20px', fontSize:'70%'}} children='public'/> <s generated />
 
-Enter the key that corresponds to [`KeyBy`](key-by). You can check how to use it in [`Control The Game`](gamium/client/game-control).
+Enter the key that corresponds to [`KeyBy`](key-by). You can check how to use it in [`Control Game`](gamium/client/game-control).
 
 ##### Usage
 
@@ -202,7 +202,7 @@ await gamium.sendKey(KeyBy.unityKeycode('E'));
 
 <s childtag /> <code style={{ position:'relative', top:'-20px', fontSize:'70%'}} children='public'/> <s generated />
 
-Enter the key corresponding to the [`KeyBy`](key-by) array at the same time. You can check how to use it in [`Control the game`](gamium/client/game-control).
+Enter the key corresponding to the [`KeyBy`](key-by) array at the same time. You can check how to use it in [`Control Game`](gamium/client/game-control).
 
 ##### Usage
 
